refactor(core): выполнить требования код-ревью и оптимизировать архитектуру
1) Перенесли фильтрацию, сортировку и пагинацию каталога из памяти на уровень БД.

2) Убрали обращения к репозиториям из OrderMapper, оставив в нем только преобразование данных.

3) Выделили логику оформления заказа в отдельный класс PurchaseService.

4) Заменили магическое значение -1 для пустой корзины на семантически корректный результат возврата.

5) Добавили явную обработку ошибок (ResponseStatusException) при отсутствии товара в каталоге во время покупки.

6) Внедрили паттерн Post/Redirect/Get (redirect:/items/{id}) для защиты от повторной отправки формы.

7) Удалили неиспользуемые импорты и мертвый код по всему проекту.

8) Добавили защиту инвариантов в доменные модели (проверки на отрицательную цену и количество).

9) Добавили поля created_at и status в модель заказов для хранения истории и расширения бизнес-логики.

10) Убрали технический id -1 для заглушек в ItemViewModel и обновили логику отображения сетки каталога.